--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "com.android.tools.build:gradle:${BuildTools.gradle}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:${AndroidX.navigation}"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${Google.hilt}"
     }
 }
 
